mobile fix overflow hidden bug

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 html {
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -15,6 +16,7 @@ body {
     background-repeat: no-repeat;
     padding-bottom: 100px;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 .content {
